--- a/women_product1.html
+++ b/women_product1.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Air Women's T-Shirt</title>
   <style>
     html, body {
       margin: 0;
@@ -368,15 +368,15 @@
         
         <div class="thumbnail-container">
           <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/c5220e69-5fd2-41b6-a2ee-61c7bdc20802/AS+W+NSW+CLUB+SS+TEE.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/7b07a1b6-9ec5-4898-a102-a195a8e70426/AS+W+NSW+CLUB+SS+TEE.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/227a14d6-e566-48f2-ab7e-c044ed198650/AS+W+NSW+CLUB+SS+TEE.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
         <h1>Nike Air Women's T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h2>₹1199.99</h2>
 
         <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
 
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="101" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="101" data-name="Nike Air Women's T-Shirt" data-price="1199.99">
   		        Add to Bag
 	        </button>
         </div>
