--- a/men_athletix.html
+++ b/men_athletix.html
@@ -286,7 +286,7 @@
         <div class="product-grid">
             <div class="product-card">
                 <a href="men_product1.html">
-                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/44429dd8-0c30-4a38-8aef-03183c273413/AS+M+NK+DF+STRK%2B+SS+TOP.png" alt="Running Shoes">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/donj54uqf82ku8x9qkui/AS+M+NSW+TEE+ICON+FUTURA.png" alt="Running Shoes">
                     <h3>Nike Perform Tee</h3>
                 </a>
                 <p> ₹6,499</p>
