--- a/women_athletix.html
+++ b/women_athletix.html
@@ -286,9 +286,9 @@
             <div class="product-card">
                 <a href="women_product1.html">
                     <img src="product1.jpg" alt="Nike Air Force 1'07 LX">
-                    <h3>Nike Air Force 1'07 LX</h3>
+                    <h3>Nike Air Women's T-Shirt</h3>
                 </a>
-                <p>₹6,499</p>
+                <p>₹1199.99</p>
             </div>
             <div class="product-card">
                 <a href="women_product2.html">
