--- a/women_athletix.html
+++ b/women_athletix.html
@@ -285,7 +285,7 @@
         <div class="product-grid">
             <div class="product-card">
                 <a href="women_product1.html">
-                    <img src="product1.jpg" alt="Nike Air Force 1'07 LX">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" alt="Nike Air Force 1'07 LX">
                     <h3>Nike Air Women's T-Shirt</h3>
                 </a>
                 <p>₹1199.99</p>
