--- a/cricket_product5.html
+++ b/cricket_product5.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Cricket</title>
+  <title>Decathlon Batting Gloves GLV 100</title>
   <style>
     html, body {
       margin: 0;
@@ -375,10 +375,11 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Cricket T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Decathlon Batting Gloves GLV 100</h1>
+        <h2>₹599.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Cricket T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong>Gear up with confidence using the Decathlon Batting Gloves GLV 100—lightweight, breathable, and built for grip and protection so you can focus on every shot with comfort and control.
+</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -386,14 +387,13 @@
             <div class="size-option" onclick="selectSize(this)">S</div>
             <div class="size-option" onclick="selectSize(this)">M</div>
             <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            
+            
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="605" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="605" data-name="Decathlon Batting Gloves GLV 100" data-price="599.99">
   		        Add to Bag
 	        </button>
         </div>
