--- a/women_product2.html
+++ b/women_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Nike Pegasus Premium</title>
   <style>
     html, body {
       margin: 0;
@@ -375,7 +375,7 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Women's T-Shirt</h1>
+        <h1>Nike Pegasus Premium</h1>
         <h2>$129.99</h2>
 
         <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
