--- a/cricket_product6.html
+++ b/cricket_product6.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Cricket</title>
+  <title>Decathlon CH 500 Cricket Helmet</title>
   <style>
     html, body {
       margin: 0;
@@ -375,10 +375,11 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Cricket T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Decathlon CH 500 Cricket Helmet</h1>
+        <h2>₹2499.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Cricket T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Stay fearless at the crease with the Decathlon CH 500 Cricket Helmet—engineered for maximum safety, comfort, and visibility, so you can face every delivery with unmatched confidence.
+</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +389,12 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+           
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="606" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="606" data-name="Decathlon CH 500 Cricket Helmet" data-price="2499.99">
   		        Add to Bag
 	        </button>
         </div>
