--- a/men_product3.html
+++ b/men_product3.html
@@ -365,35 +365,34 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/e34c0648-91ec-4396-bc08-5cc816df7920/court-legacy-canvas-mens-shoes-d3C73Z.png" alt="Classic Casuals" />
+        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/abd6cdc8afcd418ca600e2bd42108700_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM1.jpg" alt="Classic Casuals" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/e34c0648-91ec-4396-bc08-5cc816df7920/court-legacy-canvas-mens-shoes-d3C73Z.png" onclick="changeImage(this)" alt="Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/9670d712-2605-4f14-aadf-bb1b0bc29dc5/court-legacy-canvas-mens-shoes-d3C73Z.png" onclick="changeImage(this)" alt="Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/7c35f316-0bbf-4a59-88f2-9bbbc3c2cb2c/court-legacy-canvas-mens-shoes-d3C73Z.png" onclick="changeImage(this)" alt="Top View">
+          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/abd6cdc8afcd418ca600e2bd42108700_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM1.jpg" onclick="changeImage(this)" alt="Front View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/b223dbd4e0f34ee1b518e763a1225b48_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM3_hover.jpg" onclick="changeImage(this)" alt="Side View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ece36b658a4c449daed08959e9d2a569_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM4.jpg" onclick="changeImage(this)" alt="Top View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Classic Casuals</h1>
-        <h2>₹3,999</h2>
+        <h1>Arsenal UBP Tee</h1>
+        <h2> ₹3,799</h2>
 
         <p><strong>Description:</strong> Stylish yet laid-back, these classic casual shoes are crafted for everyday comfort. Perfect for hangouts or a walk in the city, their minimal design goes with everything.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">7</div>
-            <div class="size-option" onclick="selectSize(this)">8</div>
-            <div class="size-option" onclick="selectSize(this)">9</div>
-            <div class="size-option" onclick="selectSize(this)">10</div>
-            <div class="size-option" onclick="selectSize(this)">11</div>
-            <div class="size-option" onclick="selectSize(this)">12</div>
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="003" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="003" data-name="Arsenal UBP Tee data-price="₹3,799">
   		        Add to Bag
 	        </button>
         </div>
