--- a/cricket_product5.html
+++ b/cricket_product5.html
@@ -364,13 +364,13 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://contents.mediadecathlon.com/p2896630/e61edf4d35bc5df157903889fc2a1fe3/p2896630.jpg" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://contents.mediadecathlon.com/p2896630/e61edf4d35bc5df157903889fc2a1fe3/p2896630.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2896626/30fb2dbc10e0dcfc86d9331ee31d28e7/p2896626.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2896627/38164baa509aeef0f2630d706326b42c/p2896627.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2896629/d936a28def1ae34f608e5da50ba39ae2/p2896629.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
