--- a/men_product4.html
+++ b/men_product4.html
@@ -364,35 +364,34 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/32588ac1-9616-44ff-8a6c-37eaf299ca7c/air-jordan-1-mid-shoes-86f1ZW.png" alt="High-top Sneakers" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/b19f0cb8-9214-4013-a55a-f2e8504a7d0a/M+J+BRK+FLC+SHORT+LB.png" alt="High-top Sneakers" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/32588ac1-9616-44ff-8a6c-37eaf299ca7c/air-jordan-1-mid-shoes-86f1ZW.png" onclick="changeImage(this)" alt="Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/2ed775d6-5f35-4efb-b1e1-4bcf29f1f207/air-jordan-1-mid-shoes-86f1ZW.png" onclick="changeImage(this)" alt="Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/1ef94c6f-49a1-4e6b-943a-1b0285941230/air-jordan-1-mid-shoes-86f1ZW.png" onclick="changeImage(this)" alt="Top View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/b19f0cb8-9214-4013-a55a-f2e8504a7d0a/M+J+BRK+FLC+SHORT+LB.png" onclick="changeImage(this)" alt="Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/6c3a1f93-5414-4f4f-a4e1-cc232678e6d2/M+J+BRK+FLC+SHORT+LB.png" onclick="changeImage(this)" alt="Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/a6cf7002-c7ee-47ed-b01f-7538dac702dd/M+J+BRK+FLC+SHORT+LB.png" onclick="changeImage(this)" alt="Top View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>High-top Sneakers</h1>
-        <h2>₹4,799</h2>
+        <h1>Jordan Brooklyn Fleece Shorts</h1>
+        <h2> ₹2695.00</h2>
 
-        <p><strong>Description:</strong> Make a bold statement with these high-top sneakers. Built for fashion and performance, they deliver excellent ankle support, a secure fit, and a streetwear-inspired aesthetic.</p>
+        <p><strong>Description:</strong> Soft, stylish, and built for everyday comfort. The Jordan Brooklyn Fleece Shorts feature premium fleece fabric with a relaxed fit — perfect for off-court vibes or casual wear.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">7</div>
-            <div class="size-option" onclick="selectSize(this)">8</div>
-            <div class="size-option" onclick="selectSize(this)">9</div>
-            <div class="size-option" onclick="selectSize(this)">10</div>
-            <div class="size-option" onclick="selectSize(this)">11</div>
-            <div class="size-option" onclick="selectSize(this)">12</div>
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="004" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="004" data-name="Jordan Brooklyn Fleece Shorts" data-price="₹2695.00">
   		        Add to Bag
 	        </button>
         </div>
