--- a/men_product5.html
+++ b/men_product5.html
@@ -364,34 +364,34 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/d69e0e42-cfb0-4c13-81ff-4c961bfe5ebf/benassi-jdi-mens-slides-KyTVvF.png" alt="Comfort Sliders" />
+        <img id="mainImage" class="main-image" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_1.jpg" alt="Comfort Sliders" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/d69e0e42-cfb0-4c13-81ff-4c961bfe5ebf/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 1">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/3c05bb97-6e6c-4c1e-b1fc-bdd6ff0996d4/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 2">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/34d9e07e-7f3c-441e-938a-93098246e560/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 3">
+          <img class="thumbnail active" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_1.jpg" onclick="changeImage(this)" alt="Angle 1">
+          <img class="thumbnail" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_2.jpg" onclick="changeImage(this)" alt="Angle 2">
+          <img class="thumbnail" src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_3.jpg" onclick="changeImage(this)" alt="Angle 3">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Comfort Sliders</h1>
-        <h2>₹1,499</h2>
+        <h1>Balenciaga Black Crewneck Logo T-shirt</h1>
+        <h2> ₹53500.41</h2>
 
-        <p><strong>Description:</strong> Slide into relaxation with these ultra-comfy sliders. Designed for casual wear and post-workout recovery, they offer soft cushioning, breathable comfort, and easy everyday style.</p>
+        <p><strong>Description:</strong> Minimalist and bold, this black Balenciaga crewneck tee features a relaxed fit and signature logo detail — a modern staple crafted in premium cotton for everyday luxury.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">6</div>
-            <div class="size-option" onclick="selectSize(this)">7</div>
-            <div class="size-option" onclick="selectSize(this)">8</div>
-            <div class="size-option" onclick="selectSize(this)">9</div>
-            <div class="size-option" onclick="selectSize(this)">10</div>
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="005" data-name="Balenciaga Black Crewneck Logo T-shirt" data-price="₹53500.41">
   		        Add to Bag
 	        </button>
         </div>
